# s3-uploader

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: cli.rs  config.rs  main.rs  s3_client.rs  utils.rs
src/commands/: delete.rs  download.rs  list.rs  mod.rs  server.rs  upload.rs
